--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.9", features = ["derive"] }
+serde = { version = "1.0.204", features = ["serde_derive"] }
+serde_json = "1.0.120"
