--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
-workspace = { members = ["language"] }
-[package]
+[workspace]
+members = ["language", "sti"]
+
+[workspace.package]
 name = "string_template_interface"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
-clap = { version = "4.5.9", features = ["derive"] }
-serde = { version = "1.0.204", features = ["serde_derive"] }
-serde_json = "1.0.120"
+[workspace.dependencies]
+language = { path = "./language" }
